working better, easier to use, next time I rework the code

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,10 @@
 __pycache__
 
 # Working Directories
-working_directory
+working_directory/
 
 # Visual Studio Code
 .vscode/
+
+# Video Files
+Files/
